--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   airman:
     build: .
     container_name: airman
-    image: nucleardreamer/airman:latest
+    image: nucleardreamer/airman:0.0.1
     network_mode: host
     devices:
       - /dev/dri:/dev/dri
