--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "rtl-sdr",
     "raspberry pi",
     "foreflight",
-    "ADS-B",
-    "ADSB",
-    "SDR",
+    "ads-b",
+    "adsb",
+    "sdr",
     "airplanes",
     "aircraft",
     "electron",
