--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - /dev/shm:/dev/shm
   watchtower:
-    image: v2tec/watchtower
+    image: v2tec/watchtower:armhf-latest
     container_name: watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
