--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,14 @@ services:
     container_name: airman
     image: docker.io/nucleardreamer/airman
     network_mode: host
+    privileged: true
     # devices:
     #   - /dev/dri:/dev/dri
     volumes:
       - /run/udev:/run/udev
       - /tmp/.X11-unix:/tmp/.X11-unix
-      - /dev/shm:/dev/shm
+      - /dev:/dev
+      - /sys:/sys
   watchtower:
     image: v2tec/watchtower:armhf-latest
     container_name: watchtower
