--- a/package.json
+++ b/package.json
@@ -36,13 +36,16 @@
     "@uirouter/angularjs": "~1.0.6",
     "angular": "~1.6.6",
     "angular-animate": "~1.6.6",
+    "angular-hammer": "~2.2.0",
     "express": "~4.15.4",
+    "hammerjs": "~2.0.8",
     "lodash": "~4.17.4",
-    "moment": "^2.18.1",
+    "moment": "~2.18.1",
     "oak": "~3.2.0",
     "oak-tools": "~0.5.3",
     "pug": "~2.0.0-rc.3",
     "stylus": "~0.54.5",
+    "uuid": "^3.1.0",
     "walk-sync": "~0.3.2"
   },
   "devDependencies": {
